# document_checking

./: .replit  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
components/: forms.py  history.py  results.py
utils/: ai_validator.py  database.py  document_processor.py  validator.py
